# retl

./: Cargo.toml
examples/csv-example/: .gitignore  Cargo.toml
examples/csv-example/src/: main.rs
src/: data_frame.rs  dataframe.rs  dim.rs  error.rs  lib.rs  macros.rs  pipeline.rs  record.rs  schema.rs  traits.rs  views.rs
src/convert/: json.rs  mod.rs
src/dataframe/: base.rs  data.rs  mod.rs  view.rs
src/destination/: csv.rs  mod.rs
src/ops/: cast.rs  convert.rs  filter.rs  mod.rs  reverse.rs  select.rs
src/source/: csv.rs  mod.rs
src/value/: map.rs  mod.rs  number.rs
