[package]
name = "retl"
version = "0.1.0"
authors = ["Kyle McCarthy <km@kylemccarthy.io>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.7", features = ["serde"] }
regex = "1"
prettytable-rs = "^0.8"
bincode = "1.1.4"
cpython = "0.3.0"
rust_decimal = "1.0.2"
ordered-float = "1.0"
num-traits = "0.2"
snafu = "0.5.0"
indexmap = { version = "1.1.0", features = ["serde-1"] }
